[gd_scene load_steps=6 format=3 uid="uid://da7s5nahyfn25"]

[ext_resource type="TileSet" uid="uid://de2m5qfbacay6" path="res://Test World/Textures/Tilemap/TileSet.tres" id="1_nk0be"]
[ext_resource type="Script" uid="uid://4nonghmts58c" path="res://rooms/room_scripts/camera_bounds.gd" id="2_pmtbo"]
[ext_resource type="Script" uid="uid://cgom07nuk057n" path="res://rooms/door.gd" id="3_ya37f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ya37f"]
size = Vector2(287, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pmtbo"]
size = Vector2(9, 30)

[node name="Room" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-1, -1)
tile_set = ExtResource("1_nk0be")
format = 2
layer_0/tile_data = PackedInt32Array(0, 196608, 1, 65536, 196608, 1, 131072, 196608, 1, 196608, 196608, 1, 262144, 196608, 1, 327680, 196608, 1, 393216, 196608, 1, 458752, 131072, 1, -65536, 262144, 0, -65535, 65536, 3, -65534, 65536, 3, -65533, 65536, 3, -65532, 65536, 3, -65531, 65536, 3, -65530, 65536, 3, -65529, 65536, 3, -65528, 65536, 3, -65527, 65536, 3, -65526, 65536, 3, -65525, 65536, 3, -65524, 65536, 3, -65523, 65536, 3, -65522, 65536, 3, -65521, 65536, 3, -65520, 65536, 3, -65519, 65536, 3, 18, 196608, 1, 65554, 196608, 1, 131090, 196608, 1, 196626, 196608, 1, 262162, 196608, 1, 327698, 196608, 1, 393234, 196608, 1, 458770, 0, 1, 655378, 65536, 1, 720914, 131072, 1, 786450, 131072, 1, 720896, 0, 1, 655360, 65536, 1, 851968, 0, 1, 786432, 0, 1, 786433, 65536, 1, 851986, 131072, 1, 655361, 65536, 0, 655362, 65536, 0, 655363, 65536, 0, 655364, 65536, 0, 655365, 65536, 0, 655366, 65536, 0, 655367, 65536, 0, 655368, 65536, 0, 655369, 65536, 0, 655370, 65536, 0, 655371, 65536, 0, 655377, 65536, 0, 655376, 65536, 0, 655375, 65536, 0, 655374, 65536, 0, 655373, 65536, 0, 655372, 65536, 0, 720897, 65536, 1, 851969, 65536, 1, 851970, 65536, 1, 786434, 65536, 1, 720898, 65536, 1, 720899, 65536, 1, 720900, 65536, 1, 720901, 65536, 1, 720902, 65536, 1, 720903, 65536, 1, 720904, 65536, 1, 720905, 65536, 1, 720906, 65536, 1, 851971, 65536, 1, 786435, 65536, 1, 786436, 65536, 1, 786437, 65536, 1, 851972, 65536, 1, 851973, 65536, 1, 786438, 65536, 1, 786439, 65536, 1, 851974, 65536, 1, 851975, 65536, 1, 786440, 65536, 1, 851976, 65536, 1, 786441, 65536, 1, 786442, 65536, 1, 851977, 65536, 1, 851978, 65536, 1, 786443, 65536, 1, 720907, 65536, 1, 720908, 65536, 1, 720909, 65536, 1, 720910, 65536, 1, 720911, 65536, 1, 720912, 65536, 1, 720913, 65536, 1, 786449, 65536, 1, 786448, 65536, 1, 786447, 65536, 1, 786446, 65536, 1, 786445, 65536, 1, 786444, 65536, 1, 851979, 65536, 1, 851980, 65536, 1, 851981, 65536, 1, 851982, 65536, 1, 851983, 65536, 1, 851984, 65536, 1, 851985, 65536, 1, -65518, 131072, 0, 524288, 131072, 1, 589824, 131072, 1, 524306, 0, 1, 589842, 0, 1)

[node name="CameraBounds" type="Area2D" parent="."]
script = ExtResource("2_pmtbo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraBounds"]
position = Vector2(151.5, 79)
shape = SubResource("RectangleShape2D_ya37f")

[node name="Doors" type="Node2D" parent="."]

[node name="Exit" type="Area2D" parent="Doors"]
position = Vector2(280, 141)
script = ExtResource("3_ya37f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/Exit"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_pmtbo")

[node name="Enterance" type="Area2D" parent="Doors"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/Enterance"]
position = Vector2(26, 143)
shape = SubResource("RectangleShape2D_pmtbo")

[connection signal="body_entered" from="CameraBounds" to="CameraBounds" method="_on_body_entered"]
[connection signal="body_entered" from="Doors/Exit" to="Doors/Exit" method="_on_body_entered"]
